# iron-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  OPEN_ME_FIRST.md  PACK.md  QUICKSTART.md  README.md  SECURITY.md  WORKBUDDY.md  install.ps1  install.py  manifest.json  pyproject.toml
.cursor/rules/: iron-agent-automation.mdc
adapters/claude/: CLAUDE.md
adapters/cline/: .clinerules
adapters/workbuddy/: WORKBUDDY.md
codex-global-skill/: SKILL.md
config/: automation.template.json  evolution.yaml  maintenance.json  privacy-policy.md  user-profile.template.json
docs/: CI.md  TROUBLESHOOTING.md  adapters.md  daily-use-model.md  silent-automation.md
docs/architecture/: memory-vs-wiki.md
examples/: development-agent.md  finance-settlement-shadow-review.md  task-review-shadow-review.md  user-registration-sop.md
examples/end-to-end-demo/: BEFORE-AFTER.md  INPUT.md  README.md  conversation-transcript.md
iron/: __init__.py  cli.py  core.py  web.py
packs/domain-agents/: INDEX.md
system/integrations/: personal-wiki.md
system/prompts/: codex-shadow-maintenance.md
system/scripts/: analyze_package.py  append_task_log.py  audit_skill.py  backup_workspace.py  compact_memory.py  daily_maintenance.py  domain_agent_router.py  evolution_report.py  health_check.py  import_domain_agent.py  install_skill.py  install_windows_task.ps1  memory_index_maintenance.py  memory_router.py  release_check.py  release_cleanup.py  restore_workspace.py  shadow_reviewer.py  stage_package.py  (+3 more)
wiki/: _schema.md
workspace/: workspace-config.md
(+83 files in other folders)
