[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-agent"
version = "0.3.2"
description = "Local, file-driven workspace protocol for AI coding agents."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Iron Agent Maintainers" }
]
dependencies = [
  "typer>=0.9"
]

[project.scripts]
iron = "iron.cli:app"

[tool.setuptools]
packages = ["iron"]
py-modules = ["install"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]
